deployment/deployment-matura-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matura-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: matura-frontend
  template:
    metadata:
      labels:
        app: matura-frontend
    spec:
      containers:
        - name: matura-frontend
          image: rafalnowak444/matura-react:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: matura-frontend-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: matura-frontend
